clean up HTML code

--- a/index.html
+++ b/index.html
@@ -9,12 +9,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="msapplication-TileColor" content="#66F4FD">
     <meta name="theme-color" content="#66F4FD">
-
-    <!-- <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-    <link rel="mask-icon" href="safari-pinned-tab.svg" color="#0f3557"> -->
-
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/screen.css">
     <link rel="stylesheet" href="css/rain.css">
@@ -23,17 +17,12 @@
 </head>
 
 <body class="is-rainy">
-    <!-- <div class="rain-effect">
-        <div class="rain front-row"></div>
-        <div class="rain back-row"></div>
-    </div> -->
     <section class="o-container o-container--primary o-container--hidden">
-        <!-- <section class="o-row o-row--md o-row__nav o-row__sticky"> -->
-        <div class="o-layout u-mlr-md o-layout--align-center o-layout--justify-space-between">
-            <p class="js-city c-lead--md mr">Heule</p>
+        <div class="o-layout u-mlr-md u-mt-sm o-layout--align-center o-layout--justify-space-between">
+            <p class="js-city c-lead--md u-mb-clear">Heule</p>
             <div class="theme-switch-wrapper">
                 <label class="theme-switch" for="checkbox">
-                    <input type="checkbox" id="checkbox" />
+                    <input type="checkbox" id="checkbox" checked />
                     <div class="slider round"></div>
                 </label>
             </div>
@@ -65,7 +54,7 @@
                 <div class="temperature">
                     <div class="o-layout o-layout--column o-layout--align-center u-mb-sm">
                         <p class="c-lead c-lead--xl js-temp">7<span class="c-degree-symbol">°</span></p>
-                        <p class="c-lead c-lead--md u-transparent">feels like <span class="js-realTemp">0</span>°</p>
+                        <p class="c-lead c-lead--md u-transparent">feels like <span class="js-realTemp">0</span> °</p>
                     </div>
                 </div>
                 <div class="details">
